Update to beginning

--- a/01-Beginning.adoc
+++ b/01-Beginning.adoc
@@ -1,4 +1,6 @@
 ## A Beginning
 
-
-In the beginnig the world was without form and void.
+[quote,Mass of the Dead God]
+____
+In the beginning the world was without form and void, and darkness was pon the face of the deep. And Chaos moved upon the face of the waters.
+____
