Add first media

--- a/01-Beginning.adoc
+++ b/01-Beginning.adoc
@@ -4,3 +4,11 @@
 ____
 In the beginning the world was without form and void, and darkness was pon the face of the deep. And Chaos moved upon the face of the waters.
 ____
+
+### Negative Existence
+
+Existence happens because non-existence is unstable.
+
+### Primal Chaos
+
+image::media/1-tree.png[First Tree]
