--- a/01-Beginning.adoc
+++ b/01-Beginning.adoc
@@ -2,7 +2,7 @@
 
 [quote,Mass of the Dead God]
 ____
-In the beginning the world was without form and void, and darkness was pon the face of the deep. And Chaos moved upon the face of the waters.
+In the beginning the world was without form and void, and darkness was upon the face of the deep. And Chaos moved upon the face of the waters.
 ____
 
 ### Negative Existence
