--- a/00-Intro.adoc
+++ b/00-Intro.adoc
@@ -1,5 +1,29 @@
 ## Introduction
 
+Magick is the art that weaves the fabric of reality.footnote:[We choose to use the spelling "magick" in the tradition of Aliester Crowley to differentiate from works of illusion.]
+There are many systems of magick, many paradigms.
+What makes each worthy of being called "magick" is the aim to manifest results beyond natural means.
+A comptent magickian must have some knowledge and skill of natural technologies, but the study of magick aims to move beyond the natural, to the super-natural, to miracules.
+This brings us immediately to the fundamental paradox of magick:
+How can magick be possible if at the core magick is the aims to manifest by impossible means?
+
+One common response to this paradox is to determine that this definition of magick is an absurd self-contridution and worth no further time or consideration.
+For many, this is the end of the matter.
+For others, those who do practice magick side step this paradox, saying that magick is entirely natural.
+When apparently miraculous things occur as the result of some magick work it has obeyed some natural law simply not fully expressed or yet understood.
+Also, of course, many do just fine without any fundamental theory.
+They just _do_ magick and get results and spend no time or concern about deeper questions of the possible and impossible.
+
+This current work is the result of an obsession in exploring the paradox of magick.
+The fundamental theory we put forth in this work is that magick only seems to be a paradox when we misunderstand reality and possibility.
+Magick is the art that weaves the fabric of reality.
+Magick never has been something that is real or unreal, possible or impossible, because magick is not any of these things.
+Magick is no-thing.
+
+We will endevor to trace the thread of magick from non-being to manifest reality and beyond, to show how no-thing, non-being, makes everything manifest, carrying its incompleteness with it at every step.
+
+### What is ANQ?
+
 This book introduces the concepts and practices of working with the ANQ meta-magick system.
 This is an open system with a structure inspired by Qabalah/Kabbalah, but with no intent to be an interpretation of such systems.
 
