--- a/05-Descent-of-Fire.adoc
+++ b/05-Descent-of-Fire.adoc
@@ -4,6 +4,20 @@ endif::[]
 
 ## Descent of Fire
 
+So far the process of manifestation describes only abstract static concepts.
+Because the emergence of intent in the previous step exists within a larger pattern there is now the possibility for these intents to be in conflict.
+These things can be created and destroyed.
+
+Think of a game like chess.
+First, the game consists of a set of rules, the pattern which constrains the game.
+Within the game the board starts a pre-determined configuration, with each piece able to move upon the board and take other pieces.
+The pieces of the game are clearly individual units that can be destroyed or removed depending on how the game proceeds.
+The removal of a piece does not break the game, it is part of the game.
+It is this principle, that things can change, creating and destroying that is the next principle.
+
+In the fifth step there is also an echo of the second.
+We return to process, returning to incompleteness, but in the second step the process is always building, it is now at the next level and can be destructive at this level.
+
 If the process of creation will now continue in this level, creation must necessitate destruction.
 This is simply the same process as before, chaos sparking creation into the world, but now it is disruptive to what was there previously.
 This is the fundamental nature of the force of Will, though it has not yet attached itself to an agent.
