Add content to fools journey

--- a/13-The-Fools-Journey.adoc
+++ b/13-The-Fools-Journey.adoc
@@ -3,3 +3,100 @@ link:12-That-Which-Remains.adoc[< Prev - That Which Remains <]
 endif::[]
 
 ## The Fool's Journey
+
+### 0 - The Fool
+
+### I - The Magus
+
+### II - The Spinner
+
+### III - The Serpent
+
+### IV - The Emperor
+
+### V - The Hierophant
+
+### VI - The Lovers
+
+### VII - Chariot
+
+### VIII - Justice
+
+### IX - Hermit
+
+### X - Fortune
+
+### XI - Strength
+
+### XII - Hanged Man
+
+### XIII - Death
+
+### XIV - Art
+
+### XV - Devil
+
+(6/11) Agent -> (9/19) Desire
+
+The 9th sphere as desire is the about how we build on thought to now be driven emotionally by things of thought rather than direct experience, this is attachment to the world which binds us to manifestation. The Devil is this path of binding through desire.
+This is not objectively a good or bad thing, but in the traditional rendering of this card we see the devil and humans shackled, bound by their sinfulness etc
+My take on it is that this desire is about our willingness to enter into life and play the hand we have been dealt
+buy the ticket, take the ride
+To embrace this desire is to say yes to life and all the drama that comes with it
+
+In the Thoth and G:.D:. systems this path is Art/Temperance, the interpretation of the 9th sphere is also a departure in ANQ, desire/foundation
+
+### XVI - The Tower
+
+(9/19) Desire -> (7/13) Sense
+
+This is the connection between sense and desire. It is the jolt that accompanies a sense that triggers desire or aversion. It is how an object of desire stands out. It is how our thoughts is derailed by a sudden trigger for desire.
+If we stop here, this would be the interpretation of this path in the 9th tree, but the emergence continues into manifestation. The ancestry of this path is that it split off X - Fortune and splitting from XVI - Tower is XX - Judgement as desire begets manifestation. This brings desire into a context of manifestation. In Judgement we have the satisfaction of desire, or not, at least a resolution. Tower remains specifically as desire unsatisfied. It also may be desire that compels one to act in a way that will run into disaster in reality.
+This path differs from XV - Devil in that in the XVI - Tower desire is experienced, but it is not inevitable that this desire will bind us, and, while the desires of the Tower are striking and bring something to consciousness, the desire of the Devil are part of us and more unconscious in nature
+The tower is experiencing something and it exciting us. The devil is the excitement itself, sometimes which we find overtaking us but we can't identify where it came from except from our own nature.
+
+In the Thoth this path is Emperor, in the G:.D:. system this is path the Star
+
+### XVII - The Star
+
+(7/13) Sense -> (8/17) Thought
+
+The Star is the flow of information as sense data crystallizes into thought and memory.
+The star may be thought of as a seed crystal.
+Each new bit of information is linked into the growing matrix... though this card may also represent the opposite, a dissolution of thought, things dislodged, forgotten, buried. Cognitive theory is relevant as are processes identified such as deletion, distortion, and generalization. By these mechanisms sense data is transformed to be present (or absent) from thought.
+This makes the path of the star also extremely relevant for access to the subconscious, because of its role in editing the raw data. This has been called the psychic censor.
+
+In the Thoth and G:.D:. systems this path is the Tower
+
+### XVIII - Moon
+
+### XIX - Sun
+
+### XX - Judgement
+
+### XXI - Universe
+
+### XXII - Lust
+
+(12/31) -> (9/19) Desire
+
+This path is the highest form of desire, desire for all things, all experience, for desire itself.
+This is yes to life, to all things.
+This is the path of Babylon, the scarlet woman, the great whore, the mother of abominations, etc.
+The Thoth tarot associated this meaning with Strength, but ANQ preserves more of the original meaning for that card and places Lust here.
+Note that the cross path and complement for Lust is XXVII The Acéphale, the headless one.
+In relation between these two paths, [http://lib.oto-usa.org/libri/liber0156.html Liber Chet] is appropriate.
+
+This path in the ANQ tree or card number has no correspondence in other systems.
+
+### XXIII - The Acéphale
+
+### XXIV - Rapture
+
+### XXV - Dream
+
+### XXVI - The Aeon
+
+### XXVII - Shadow
+
+### XXVIII - The Cavern
