Add content to fools journey

--- a/13-The-Fools-Journey.adoc
+++ b/13-The-Fools-Journey.adoc
@@ -44,7 +44,7 @@ My take on it is that this desire is about our willingness to enter into life an
 buy the ticket, take the ride
 To embrace this desire is to say yes to life and all the drama that comes with it
 
-In the Thoth and G:.D:. systems this path is Art/Temperance, the interpretation of the 9th sphere is also a departure in ANQ, desire/foundation
+In the Thoth and G∴D∴ systems this path is Art/Temperance, the interpretation of the 9th sphere is also a departure in ANQ, desire/foundation
 
 ### XVI - The Tower
 
@@ -55,7 +55,7 @@ If we stop here, this would be the interpretation of this path in the 9th tree, 
 This path differs from XV - Devil in that in the XVI - Tower desire is experienced, but it is not inevitable that this desire will bind us, and, while the desires of the Tower are striking and bring something to consciousness, the desire of the Devil are part of us and more unconscious in nature
 The tower is experiencing something and it exciting us. The devil is the excitement itself, sometimes which we find overtaking us but we can't identify where it came from except from our own nature.
 
-In the Thoth this path is Emperor, in the G:.D:. system this is path the Star
+In the Thoth this path is Emperor, in the G∴D∴ system this is path the Star
 
 ### XVII - The Star
 
@@ -74,7 +74,33 @@ In the Thoth and G:.D:. systems this path is the Tower
 
 ### XX - Judgement
 
+(10/23) Object -> (7/17) Sense
+
+The meaning of XX - Judgement is derived from sense of an object.
+This is not the judgement of Judgement Day, it is simply, our judgement comes from experience.
+Everything that we know about the world comes from sense.
+We know that our sense is also not the thing itself.
+We know that color as we experience is not an inherent property of the things which appeared with color to us, but the direct experience is the closest we get.
+
+In the Thoth and G∴D∴ systems this path is the Moon.
+The Thoth tarot calls this path the Aeon, but for ANQ this will appear as trump XXV.
+
 ### XXI - Universe
+
+(7/13) Sense -> (12/31)
+
+In ANQ the Universe means something quite different.
+The universe is flow of data itself that arrives through sense, the experience of having experience, Qualia.
+To experience the universe how it is requires dropping all concept of what the universe is and instead just experiencing.
+As this is experience of experience, it is also transcendental consciousness, consciousness that transcends that which is conscious of.
+This is consciousness without any sort of judgement
+Some call this a flow state, but it isn't clear if everyone means the same thing by flow.
+The state can be identified by a sort of detachment with perfect clarity
+It may seem odd that the World or Universe is not connected to the sphere of objectivity... this is because ultimately what is "real" is neither subjective nor objective.
+
+Trump XXI is Universe in Thoth and World traditionally.
+
+This path has no correspondence in other systems, though the path splits off of XVI - Tower.
 
 ### XXII - Lust
 
@@ -89,14 +115,14 @@ In relation between these two paths, [http://lib.oto-usa.org/libri/liber0156.htm
 
 This path in the ANQ tree or card number has no correspondence in other systems.
 
-### XXIII - The Acéphale
+### XXIII - The Rebel
 
-### XXIV - Rapture
+### XXIV - The Labyrinth
 
-### XXV - Dream
+### XXV - The Aeon
 
-### XXVI - The Aeon
+### XXVI - Shadows
 
-### XXVII - Shadow
+### XXVII - The Acéphale
 
 ### XXVIII - The Cavern
